# normalize-telemetry-rust

./: .yo-rc.json  Cargo.toml
benches/: normalize_benchmark.rs
data/: input.json  normalized.json  output.json
src/: main.rs  normalize.rs
src/lib/: flatten.rs  lib.rs  normalize.rs  utils.rs
